--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -10,19 +10,47 @@
     <meta name="keywords" content="flatIron,party planner,party,demo,sintra,">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="/stylesheets/normalize.css" >
+    <link rel="stylesheet" href="/stylesheets/layout_style.css" >
   </head>
   <body>
     <header>
       <h1><%=@header_text%></h2>
       <p><%=@follow_up_paragraph%></p>
     </header>
-    <nav>
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Parties</a></li>
-        <li><a href="#">Present</a></li>
-        <li><a href="#">&#128515;</a></li>
-      </ul>
+    <nav class='flex-container'>
+        <div class="dropdown">
+          <p class='dropdown-top'>Home</p>
+          <div class="dropdown-content">
+            <div><a href="#">Link 1</a></div>
+            <div><a href="#">Link 2</a></div>
+            <div><a href="#">Link 3</a></div>
+          </div>
+        </div>
+        <div class="dropdown">
+          <div class='dropdown-top'><p>Parties</p></div>
+          <div class="dropdown-content">
+            <div><a href="#">Link 1</a></div>
+            <div><a href="#">Link 2</a></div>
+            <div><a href="#">Link 3</a></div>
+          </div>
+        </div>
+        <div class="dropdown">
+          <div class='dropdown-top'><p>Present</p></div>
+          <div class="dropdown-content">
+            <div><a href="#">Link 1</a></div>
+            <div><a href="#">Link 2</a></div>
+            <div><a href="#">Link 3</a></div>
+          </div>
+        </div>
+        <div class="dropdown">
+          <div class='dropdown-top'><p>profile</p></div>
+          <div class="dropdown-content">
+            <div><a href="#">Link 1</a></div>
+            <div><a href="#">Link 2</a></div>
+            <div><a href="#">Link 3</a></div>
+          </div>
+        </div>
+        <button class="dropbtn">Signout</button>
     </nav>
 
     <div class="wrapper">
