--- a/app/views/user/profile.erb
+++ b/app/views/user/profile.erb
@@ -2,9 +2,21 @@
 
 <form action="/user/me" method = 'post'>
   <fieldset>
-    <legend>Reset Password:</legend>
+    <legend>Change Name:</legend>
     <input type="hidden" name="_method" value="patch">
-    <input type="hidden" name="reset_password" value="yes">
+    <input type="hidden" name="change_name" value="yes">
+    <label for="new_name">New Name:</label><br>
+    <input type="text" id="new_name" name="new_name"  pattern="[A-Za-z-0-9]+\s[A-Za-z-'0-9]+" placeholder="John Doe" title="Firstname Lastname" required><br>
+    <input type="submit" value="Submit">
+    <input type="reset" value="Clear">
+  </fieldset>
+</form>
+
+<form action="/user/me" method = 'post'>
+  <fieldset>
+    <legend>Change Password:</legend>
+    <input type="hidden" name="_method" value="patch">
+    <input type="hidden" name="change_password" value="yes">
     <label for="current_password">Current Password:</label><br>
     <input type="password" id="current_password" name="current_password" minlength="8" required ><br>
     <label for="new_password">New Password:</label><br>
