--- a/app/views/user/profile.erb
+++ b/app/views/user/profile.erb
@@ -1,5 +1,5 @@
 <h2><%=@name%></h2>
-
+<br>
 <form action="/user/me" method = 'post'>
   <fieldset>
     <legend>Change Name:</legend>
@@ -11,7 +11,7 @@
     <input type="reset" value="Clear">
   </fieldset>
 </form>
-
+<br>
 <form action="/user/me" method = 'post'>
   <fieldset>
     <legend>Change Password:</legend>
@@ -25,5 +25,15 @@
     <input type="password" id="new_confirm_password" name="new_confirm_password" minlength="8" required><br><br>
     <input type="submit" value="Submit">
     <input type="reset" value="Clear">
+  </fieldset>
+</form>
+<br>
+<form action="/user/me" method = 'post'>
+  <fieldset>
+    <legend>Delete account:</legend>
+    <input type="hidden" name="_method" value="delete">
+    <label for="current_password">Current Password:</label><br>
+    <input type="password" id="current_password" name="current_password" minlength="8" required ><br>
+    <input type="submit" value="Delete My Account!">
   </fieldset>
 </form>
