--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title><%=@title%></title>
+    <title>Party Planning, inc</title>
     <meta name="author" content="Anthony Tilelli">
     <meta name="description" content="A Sinatra demo project created for Flatiron bootcamp">
     <meta name="keywords" content="flatIron,party planner,party,demo,sintra,">
@@ -14,8 +14,8 @@
   </head>
   <body>
     <header>
-      <h1><%=@header_text%></h2>
-      <p><%=@follow_up_paragraph%></p>
+      <h1>Party Planning, inc</h2>
+      <p>Best Place to Schedule your Party!</p>
     </header>
     <nav class='flex-container'>
         <div class="dropdown">
