prep for password less functions

--- a/app/views/user/login.erb
+++ b/app/views/user/login.erb
@@ -7,4 +7,5 @@
   <input type="password" id="password" name="password" minlength="8" required><br>
   <input type="submit" value="Submit">
 </form> 
- <a href="/user/forgot_password">Forgot my Password</a> 
+<a href="/user/forgot_password">Forgot my Password</a>
+<a href="/user/login/passwordless">Passwordless Login</a>
