--- a/app/views/user/profile.erb
+++ b/app/views/user/profile.erb
@@ -30,10 +30,30 @@
 <br>
 <form action="/user/me" method = 'post'>
   <fieldset>
+    <p>Currently set to '<%= @user.allow_passwordless ? "Enabled" : "Disabled" %>'</p>
+    <legend>Enable/Disable Passwordless Login:</legend>
+    <input type="hidden" name="_method" value="patch">
+    <input type="hidden" name="change_passwordless" value="yes">
+    <input type="radio" id="passwordless_yes" name="passwordless" value="yes" required>
+    <label for="passwordless_yes">Yes</label><br>
+    <input type="radio" id="passwordless_no" name="passwordless" value="no" required>
+    <label for="passwordless_yes">No</label><br>
+    <label for="current_password">Current Password:</label><br>
+    <input type="password" id="current_password" name="current_password" minlength="8" required ><br>
+    <input type="submit" value="Submit">
+    <input type="reset" value="Clear">
+  </fieldset>
+</form>
+<br>
+<form action="/user/me" method = 'post'>
+  <fieldset>
     <legend>Delete account:</legend>
     <input type="hidden" name="_method" value="delete">
     <label for="current_password">Current Password:</label><br>
     <input type="password" id="current_password" name="current_password" minlength="8" required ><br>
+    <%# checkbox only used for conformation on webpage %>
+    <label for="i_am_sure"> Action is not reversible: </label>
+    <input type="checkbox" id="i_am_sure" name="i_am_sure" required ><br>
     <input type="submit" value="Delete My Account!">
   </fieldset>
 </form>
