--- a/app/views/user/signup.erb
+++ b/app/views/user/signup.erb
@@ -16,6 +16,14 @@
   <label for="password_Confirmation">Password Confirmation:</label><br>
   <input type="password" id="password_confirmation" name="password_confirmation" minlength="8" required><br>
 
+  <p>Allow Passwordless login:</p>
+  <input type="radio" id="passwordless_yes" name="passwordless" value="yes" required>
+  <label for="passwordless_yes">Yes</label><br>
+  <input type="radio" id="passwordless_no" name="passwordless" value="no" required>
+  <label for="passwordless_yes">No</label><br>
+
+  <br>
+
   <input type="submit" value="Submit"> 
   <input type="reset" value="Clear">
 </form>
