--- a/app/views/user/profile.erb
+++ b/app/views/user/profile.erb
@@ -52,7 +52,7 @@
     <label for="current_password">Current Password:</label><br>
     <input type="password" id="current_password" name="current_password" minlength="8" required ><br>
     <%# checkbox only used for conformation on webpage %>
-    <label for="i_am_sure"> Action is not reversible: </label>
+    <label for="i_am_sure"> Deletion is not reversible: </label>
     <input type="checkbox" id="i_am_sure" name="i_am_sure" required ><br>
     <input type="submit" value="Delete My Account!">
   </fieldset>
