--- a/app/views/user/login.erb
+++ b/app/views/user/login.erb
@@ -1,5 +1,10 @@
 <h2>Login into Party Planner</h2>
 
+<div>
+  <a href="/user/signup">Signup to Join the Party!</a>
+</div>
+<br>
+
 <form action="/user/login" method="POST">
   <label for="email">Email:</label><br>
   <input type="email" id="email" name="email" required><br>
