updated to basic html emails

--- a/app/views/user/signup.erb
+++ b/app/views/user/signup.erb
@@ -20,7 +20,7 @@
   <input type="radio" id="passwordless_yes" name="passwordless" value="yes" required>
   <label for="passwordless_yes">Yes</label><br>
   <input type="radio" id="passwordless_no" name="passwordless" value="no" required>
-  <label for="passwordless_yes">No</label><br>
+  <label for="passwordless_no">No</label><br>
 
   <br>
 
