--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -4,27 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title><%=@title%></title>
+    <title>Party Planning, inc</title>
     <meta name="author" content="Anthony Tilelli">
     <meta name="description" content="A Sinatra demo project created for Flatiron bootcamp">
-    <meta name="keywords" content="flatIron,party planner,party,demo,sintra,">
+    <meta name="keywords" content="flatIron, party planner, party,demo, sintra">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="/stylesheets/normalize.css" >
     <link rel="stylesheet" href="/stylesheets/layout_style.css" >
   </head>
   <body>
     <header>
-      <h1><%=@header_text%></h2>
-      <p><%=@follow_up_paragraph%></p>
+      <h1>Party Planning, inc</h2>
+      <p>Best Place to Schedule your Party!</p>
     </header>
     <nav class='flex-container'>
         <div class="dropdown">
-          <p class='dropdown-top'>Home</p>
-          <div class="dropdown-content">
-            <div><a href="#">Link 1</a></div>
-            <div><a href="#">Link 2</a></div>
-            <div><a href="#">Link 3</a></div>
-          </div>
+          <div class='dropdown-top'><p><a href="/">Home</a></p></div>
         </div>
         <div class="dropdown">
           <div class='dropdown-top'><p>Parties</p></div>
@@ -42,16 +37,22 @@
             <div><a href="#">Link 3</a></div>
           </div>
         </div>
-        <div class="dropdown">
-          <div class='dropdown-top'><p>profile</p></div>
-          <div class="dropdown-content">
-            <div><a href="#">Link 1</a></div>
-            <div><a href="#">Link 2</a></div>
-            <div><a href="#">Link 3</a></div>
+        <% if session['user_id'] %>
+          <div class="dropdown">
+            <div class='dropdown-top'><p><a href="/user/me">Profile Settings</a></p></div>
           </div>
+        <% end %>
+        <div class="dropdown">
+          <% login_link = session['user_id'] ? '<a href="/user/logout">Logout</a>' : '<a href="/user/login">Login/ Signup</a>' %>
+          <div class='dropdown-top'><p><%= login_link%></p></div>
         </div>
-        <button class="dropbtn">Signout</button>
     </nav>
+
+    <% if defined? flash %>
+      <% flash.keys.each do |type| %>
+        <p  class="flash-<%= type %>" ><%= flash[type] %></p>
+      <% end %>
+    <% end %>
 
     <div class="wrapper">
       <%= yield %>
