added filter and updated some paths

--- a/app/views/user/login_passwordless.erb
+++ b/app/views/user/login_passwordless.erb
@@ -7,4 +7,4 @@
   <input type="email" id="email" name="email" required><br>
   <input type="submit" value="Submit">
 </form> 
- <a href="/user/login">Return to password based login.</a>
+ <a href="/pre_user/user/login">Return to password based login.</a>
