start moving login routes to auth controller

--- a/app/views/user/password_reset.erb
+++ b/app/views/user/password_reset.erb
@@ -7,3 +7,5 @@
   <input type="email" id="email" name="email" required><br>
   <input type="submit" value="Send password reset email">
 </form> 
+<br>
+ <a href="/pre_user/login">Return to Login.</a>
