updated auth and changed inheritance to applicationController

--- a/app/views/user/password_reset.erb
+++ b/app/views/user/password_reset.erb
@@ -8,4 +8,4 @@
   <input type="submit" value="Send password reset email">
 </form> 
 <br>
- <a href="/pre_user/login">Return to Login.</a>
+ <a href="/pre_auth/login">Return to Login.</a>
