--- a/app/views/auth/login_passwordless.erb
+++ b/app/views/auth/login_passwordless.erb
@@ -2,9 +2,10 @@
 
 <p>Passwordless Login allows you to login via an emailed link.</p>
 
-<form action="/pre_user/login/passwordless" method="POST">
+<form action="/pre_auth/login/passwordless" method="POST">
   <label for="email">Email:</label><br>
   <input type="email" id="email" name="email" required><br>
   <input type="submit" value="Submit">
 </form> 
-<a href="/pre_user/login">Return to password based login.</a>
+<br>
+<a href="/pre_auth/login">Return to password based login.</a>
