--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -43,7 +43,7 @@
           </div>
         <% end %>
         <div class="dropdown">
-          <% login_link = session['user_id'] ? '<a href="/logout">Logout</a>' : '<a href="/pre_user/login">Login or Signup</a>' %>
+          <% login_link = session['user_id'] ? '<a href="/logout">Logout</a>' : '<a href="/pre_auth/login">Login or Signup</a>' %>
           <div class='dropdown-top'><p><%= login_link%></p></div>
         </div>
     </nav>
