update user to use auth and applicationController correctly

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -39,7 +39,7 @@
         </div>
         <% if session['user_id'] %>
           <div class="dropdown">
-            <div class='dropdown-top'><p><a href="/authed/user/me">Profile Settings</a></p></div>
+            <div class='dropdown-top'><p><a href="/post_auth/user/me">Profile Settings</a></p></div>
           </div>
         <% end %>
         <div class="dropdown">
