--- a/app/views/user/reset_password.erb
+++ b/app/views/user/reset_password.erb
@@ -1,4 +1,4 @@
-<h2>Login into Party Planner</h2>
+<h2>Reset password for <%=@user.email%></h2>
 
 <form action="/user/reset_password" method="POST">
   <input type="hidden" name="_method" value="patch">
