--- a/app/views/user/profile.erb
+++ b/app/views/user/profile.erb
@@ -1,10 +1,9 @@
 <h2><%=@user.name%></h2>
 <br>
-<form action="/user/me" method = 'post'>
+<form action="/post_auth/user/modify/name" method = 'post'>
   <fieldset>
     <legend>Change Name:</legend>
     <input type="hidden" name="_method" value="patch">
-    <input type="hidden" name="change_name" value="yes">
     <label for="new_name">New Name:</label><br>
     <input type="text" id="new_name" name="new_name"  pattern="[A-Za-z-0-9]+\s[A-Za-z-'0-9]+" placeholder="John Doe" title="Firstname Lastname" required><br>
     <input type="submit" value="Submit">
@@ -12,11 +11,10 @@
   </fieldset>
 </form>
 <br>
-<form action="/user/me" method = 'post'>
+<form action="/post_auth/user/modify/password" method = 'post'>
   <fieldset>
     <legend>Change Password:</legend>
     <input type="hidden" name="_method" value="patch">
-    <input type="hidden" name="change_password" value="yes">
     <label for="current_password">Current Password:</label><br>
     <input type="password" id="current_password" name="current_password" minlength="8" required ><br>
     <label for="new_password">New Password:</label><br>
@@ -28,12 +26,11 @@
   </fieldset>
 </form>
 <br>
-<form action="/user/me" method = 'post'>
+<form action="/post_auth/user/modify/passwordless" method = 'post'>
   <fieldset>
     <p>Currently set to '<%= @user.allow_passwordless ? "Enabled" : "Disabled" %>'</p>
     <legend>Enable/Disable Passwordless Login:</legend>
     <input type="hidden" name="_method" value="patch">
-    <input type="hidden" name="change_passwordless" value="yes">
     <input type="radio" id="passwordless_yes" name="passwordless" value="yes" required>
     <label for="passwordless_yes">Yes</label><br>
     <input type="radio" id="passwordless_no" name="passwordless" value="no" required>
@@ -45,7 +42,7 @@
   </fieldset>
 </form>
 <br>
-<form action="/user/me" method = 'post'>
+<form action="/post_auth/user/me" method = 'post'>
   <fieldset>
     <legend>Delete account:</legend>
     <input type="hidden" name="_method" value="delete">
