--- a/app/views/auth/login.erb
+++ b/app/views/auth/login.erb
@@ -1,11 +1,11 @@
 <h2>Login into Party Planner</h2>
 
 <div>
-  <a href="/user/signup">Signup to Join the Party!</a>
+  <a href="/pre_auth/user/signup">Signup to Join the Party!</a>
 </div>
 <br>
 
-<form action="/user/login" method="POST">
+<form action="/pre_auth/login" method="POST">
   <label for="email">Email:</label><br>
   <input type="email" id="email" name="email" required><br>
   <label for="password">Password:</label><br>
@@ -13,4 +13,4 @@
   <input type="submit" value="Submit">
 </form> 
 <a href="/user/forgot_password">Forgot my Password</a>
-<a href="/user/login/passwordless">Passwordless Login</a>
+<a href="/pre_auth/login/passwordless">Passwordless Login</a>
