--- a/app/views/user/profile.erb
+++ b/app/views/user/profile.erb
@@ -34,7 +34,7 @@
     <input type="radio" id="passwordless_yes" name="passwordless" value="yes" required>
     <label for="passwordless_yes">Yes</label><br>
     <input type="radio" id="passwordless_no" name="passwordless" value="no" required>
-    <label for="passwordless_yes">No</label><br>
+    <label for="passwordless_no">No</label><br>
     <label for="current_password">Current Password:</label><br>
     <input type="password" id="current_password" name="current_password" minlength="8" required ><br>
     <input type="submit" value="Submit">
