--- a/app/views/auth/login.erb
+++ b/app/views/auth/login.erb
@@ -1,16 +1,18 @@
-<h2>Login into Party Planner</h2>
+<main>
+  <h2>Login into Party Planner</h2>
 
-<div>
-  <a href="/pre_auth/user/signup">Signup to Join the Party!</a>
-</div>
-<br>
+  <div>
+    <a href="/pre_auth/user/signup">Signup to Join the Party!</a>
+  </div>
+  <br>
 
-<form action="/pre_auth/login" method="POST">
-  <label for="email">Email:</label><br>
-  <input type="email" id="email" name="email" required><br>
-  <label for="password">Password:</label><br>
-  <input type="password" id="password" name="password" minlength="8" required><br>
-  <input type="submit" value="Submit">
-</form> 
-<a href="/user/forgot_password">Forgot my Password</a>
-<a href="/pre_auth/login/passwordless">Passwordless Login</a>
+  <form action="/pre_auth/login" method="POST">
+    <label for="email">Email:</label><br>
+    <input type="email" id="email" name="email" required><br>
+    <label for="password">Password:</label><br>
+    <input type="password" id="password" name="password" minlength="8" required><br>
+    <input type="submit" value="Submit">
+  </form> 
+  <a href="/user/forgot_password">Forgot my Password</a>
+  <a href="/pre_auth/login/passwordless">Passwordless Login</a>
+</main>
