--- a/app/views/auth/login_passwordless.erb
+++ b/app/views/auth/login_passwordless.erb
@@ -1,11 +1,13 @@
-<h2>Login into Party Planner</h2>
+<main>
+  <h2>Login into Party Planner</h2>
 
-<p>Passwordless Login allows you to login via an emailed link.</p>
+  <p>Passwordless Login allows you to login via an emailed link.</p>
 
-<form action="/pre_auth/login/passwordless" method="POST">
-  <label for="email">Email:</label><br>
-  <input type="email" id="email" name="email" required><br>
-  <input type="submit" value="Submit">
-</form> 
-<br>
-<a href="/pre_auth/login">Return to password based login.</a>
+  <form action="/pre_auth/login/passwordless" method="POST">
+    <label for="email">Email:</label><br>
+    <input type="email" id="email" name="email" required><br>
+    <input type="submit" value="Submit">
+  </form> 
+  <br>
+  <a href="/pre_auth/login">Return to password based login.</a>
+</main>
