edit comment on venue edit_or_new.erb

--- a/app/views/venue/edit_or_new.erb
+++ b/app/views/venue/edit_or_new.erb
@@ -40,7 +40,7 @@
     </div>
     <br>
 
-    <%# checkbox only used for conformation on webpage %>
+    <%# checkbox only used on webpage %>
     <label for="update_check"> <%=confirm%> </label>
     <input type="checkbox" id="update_check" name="update_check" required ><br>
     <input type="submit" value="Submit">
@@ -63,3 +63,5 @@
     </fieldset>
   </form>
 <%end%>
+
+<p><a href="/admin/venue">Return to Venue list</a></p>
