--- a/app/views/party/new.erb
+++ b/app/views/party/new.erb
@@ -1,11 +1,11 @@
 <main>
   <h2>Lets create a party no one will ever forget.</h2>
-  <form action="#" method = 'post' id="new_party">
+  <form action="/post_auth/party/new" method = 'post' id="new_party">
     <label for="name">Party Name:</label><br>
     <input type="text" id="name" name="name" minlength="5" required><br>
 
     <label for="venue">Select Venue:</label>
-    <select id="venue" name="vanue" form="new_party" required>
+    <select id="venue" name="venue" form="new_party" required>
       <option value=""></option> <%# default blank%>
       <% Venue.all.each do |venue| %>
         <% if venue.active %>
