add view all parties and some party view tweeks

--- a/app/views/party/new.erb
+++ b/app/views/party/new.erb
@@ -32,11 +32,11 @@
 
     <label for="time_slot">Choose Time Slots</label>
     <select id="time_slot" name="time_slot" form="new_party" required>
-    b <option value=""></option> <%# default blank%>
+      <option value=""></option> <%# default blank%>
       <option value="1">Morning</option>
       <option value="2">Afternoon</option>
       <option value="3">Evening</option>
-      <option value="4">OverNight</option>
+      <option value="4">Latenight</option>
     </select>
 
     <br>
