--- a/app/views/party/view.erb
+++ b/app/views/party/view.erb
@@ -1,6 +1,5 @@
 <main>
-# TODO: fix up
-  <%=@party.name%> hosted by <%=@party.user.name%>
-  The theme is <%=@party.theme.name%>
-  At <%=@party.venue.name%> at <%=@party.event_date%> TimeSlot: <%=@party.time_slot%>
+  <h2><%=@party.name%> hosted by <%=@party.user.name%></h2>
+  <p>The theme is <%=@party.theme.name%></p>
+  <p>At <%=@party.venue.name%> at <%=@party.event_date%> TimeSlot: <%=time_slot_to_date(@party.time_slot)%> </p>
 </main>
