--- a/app/views/party/view_all.erb
+++ b/app/views/party/view_all.erb
@@ -1,14 +1,19 @@
 <main>
   <h2><%= @user.name%>'s Parties</h2>
-  <h3>Parties you are hosting:</h3>
-  <%@user_hosted.each do |party| %>
-    <dl>
-      <dt><%=party.name%></dt>
-      <dd>theme: <%=party.theme.name%></dd>
-      <dd>Venue: <%=party.venue.name%></dd>
-      <dd>Date: <%=party.event_date%> TimeSlot: <%=time_slot_to_date(party.time_slot)%></dd>
-   </dl>
-  <%end%>
-  <h3>Parties you are invited to:</h3>
-  <p># TODO</p>
+  <article>
+    <h3>Parties you are hosting:</h3>
+    <%@user_hosted.each do |party| %>
+      <dl>
+        <dt><%=party.name%></dt>
+        <dd>theme: <%=party.theme.name%></dd>
+        <dd>Venue: <%=party.venue.name%></dd>
+        <dd>Date: <%=party.event_date%> TimeSlot: <%=time_slot_to_date(party.time_slot)%></dd>
+        <dd><a href="/post_auth/party/<%=party.id%>/edit"> Edit </a></dd>
+    </dl>
+    <%end%>
+  </article>
+  <article>
+    <h3>Parties you are invited to:</h3>
+    <p># TODO</p>
+  </article>
 </main>
