add delete and edit

--- a/app/views/party/new_edit.erb
+++ b/app/views/party/new_edit.erb
@@ -67,7 +67,7 @@
     <br>
     <form action="/post_auth/party/<%=@party.id%>" method = 'post'>
       <fieldset>
-        <legend>Delete Theme:</legend>
+        <legend>Delete Party:</legend>
         <input type="hidden" name="_method" value="delete">
         <%# checkbox only used for conformation on webpage %>
         <label for="i_am_sure"> Deletion is not reversible: </label>
