--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -22,14 +22,6 @@
           <div class='dropdown-top'><p><a href="/">Home</a></p></div>
         </div>
         <div class="dropdown">
-          <div class='dropdown-top'><p>Parties</p></div>
-          <div class="dropdown-content">
-            <div><a href="#">Link 1</a></div>
-            <div><a href="#">Link 2</a></div>
-            <div><a href="#">Link 3</a></div>
-          </div>
-        </div>
-        <div class="dropdown">
           <div class='dropdown-top'><p>Present</p></div>
           <div class="dropdown-content">
             <div><a href="#">Link 1</a></div>
@@ -37,6 +29,16 @@
             <div><a href="#">Link 3</a></div>
           </div>
         </div>
+        <%if session['user_id']%>
+          <div class="dropdown">
+            <div class='dropdown-top'><p>Parties/Location</p></div>
+            <div class="dropdown-content">
+              <div><a href="/post_auth/party">Party List</a></div>
+              <div><a href="/post_auth/party/new">New Parties</a></div>
+              <div><a href="/venue">Venue Lists</a></div>
+            </div>
+          </div>
+        <% end %>
         <% if session['user_id'] && session['admin'] != 'yes' %>
           <div class="dropdown"> <%# User %>
             <div class='dropdown-top'><p><a href="/post_auth/user/me">Profile Settings</a></p></div>
