--- a/app/views/party/view_all.erb
+++ b/app/views/party/view_all.erb
@@ -7,10 +7,10 @@
       <dl>
         <dt><%=party.name%></dt>
         <dd>theme: <%=party.theme.name%></dd>
-        <dd>Venue: <%=party.venue.name%></dd>
+        <dd>Venue: <a href='/venue'><%=party.venue.name%></a></dd>
         <dd>Date: <%=party.event_date%> TimeSlot: <%=time_slot_to_date(party.time_slot)%></dd>
         <dd><a href="/post_auth/party/<%=party.id%>/edit"> Edit </a></dd>
-    </dl>
+      </dl>
     <%end%>
   </article>
   <article>
