--- a/app/views/party/view_all.erb
+++ b/app/views/party/view_all.erb
@@ -8,8 +8,9 @@
         <dt><%=party.name%></dt>
         <dd>theme: <%=party.theme.name%></dd>
         <dd>Venue: <a href='/venue'><%=party.venue.name%></a></dd>
-        <dd>Date: <%=party.event_date%> TimeSlot: <%=time_slot_to_date(party.time_slot)%></dd>
-        <dd><a href="/post_auth/party/<%=party.id%>/edit"> Edit </a></dd>
+        <dd>Date: <%=party.event_date%></dd>
+        <dd>TimeSlot: <%=time_slot_to_date(party.time_slot)%></dd>
+        <dd><a href="/post_auth/party/<%=party.id%>"> Edit </a></dd>
       </dl>
     <%end%>
   </article>
