--- a/app/views/party/view_all.erb
+++ b/app/views/party/view_all.erb
@@ -2,6 +2,8 @@
   <h2><%= @user.name%>'s Parties</h2>
   <article>
     <h3>Parties you are hosting:</h3>
+    <%#List of all parties created by user %>
+    <%@user_hosted = Party.all.find_all { |party| party.user == @user }%>
     <%='<p>You are not hosting any parties.  <a href="/post_auth/party/new">Why not start now?</a></p>' if @user_hosted.empty?%>
     <%@user_hosted.each do |party| %>
       <dl>
