--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -9,7 +9,13 @@
     <meta name="description" content="A Sinatra demo project created for Flatiron bootcamp">
     <meta name="keywords" content="flatIron, party planner, party, demo, sintra">
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+    <!-- BoostStrap Items START-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+    <!-- BootStrap Items END--->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   </head>
   <body>
     <header class="jumbotron text-center">
@@ -17,23 +23,28 @@
       <h3>Best Place to Schedule your Party!</h3>
     </header>
 
-    <nav class="navbar navbar-expand-lg justify-content-center">
-      <ul class="navbar-nav">
-        <li class="nav-item"><a a class="nav-link" href="/">Home</a></li>
-        <%if session['user_id']%>
-          <li class="nav-item"><a class="nav-link" href="/post_auth/party">My Parties</a></li>
-          <li class="nav-item"><a class="nav-link" href="/post_auth/party/new">Schedule a Party</a></li>
-          <li class="nav-item"><a class="nav-link" a href="/venue">Venue Locations</a></li>
-          <li class="nav-item"><a class="nav-link" href="/post_auth/user/me">User Settings</a></li>
-        <%end%>
-        <% if session['admin'] == 'yes' %>
-          <li class="nav-item"><a class="nav-link" href="/admin/venue">Admin Venues</a></li>
-          <li class="nav-item"><a class="nav-link" href="/admin/theme">Admin Themes</a></li>
-        <% end %>
-        <% login_link = session['user_id'] ? '/logout' : '/pre_auth/login' %>
-        <% login_text = session['user_id'] ? 'Logout' : 'Login or Signup' %>
-        <li class="nav-item"><a class="nav-link" href="<%=login_link%>"><%=login_text%></a></li>
-      </ul>
+    <nav class="navbar navbar-expand-lg ">
+      <a class="navbar-brand" href="/">PartyPlanner</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+         <i class="material-icons">menu</i>
+      </button>
+      <div class="collapse navbar-collapse justify-content-center" id="collapsibleNavbar">
+        <ul class="navbar-nav">
+          <%if session['user_id']%>
+            <li class="nav-item"><a class="nav-link" href="/post_auth/party">My Parties</a></li>
+            <li class="nav-item"><a class="nav-link" href="/post_auth/party/new">Schedule a Party</a></li>
+            <li class="nav-item"><a class="nav-link" a href="/venue">Venue Locations</a></li>
+            <li class="nav-item"><a class="nav-link" href="/post_auth/user/me">User Settings</a></li>
+          <%end%>
+          <% if session['admin'] == 'yes' %>
+            <li class="nav-item"><a class="nav-link" href="/admin/venue">Admin Venues</a></li>
+            <li class="nav-item"><a class="nav-link" href="/admin/theme">Admin Themes</a></li>
+          <% end %>
+          <% login_link = session['user_id'] ? '/logout' : '/pre_auth/login' %>
+          <% login_text = session['user_id'] ? 'Logout' : 'Login or Signup' %>
+          <li class="nav-item"><a class="nav-link" href="<%=login_link%>"><%=login_text%></a></li>
+        </ul>
+      </div>
     </nav>
 
     <% if defined? flash %>
