--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -47,7 +47,14 @@
       </div>
     </nav>
 
-    <% if defined? flash %>
+    <% unless flash.empty? %>
+      <div class="alert alert-success alert-dismissible fade show">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        <strong>Success!</strong> Indicates a successful or positive action.
+      </div>
+    <% end %>
+
+    <% unless flash.empty? %>
       <% flash.keys.each do |type| %>
         <p  class="flash-<%= type %>" ><%= flash[type] %></p>
       <% end %>
