--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -48,16 +48,12 @@
     </nav>
 
     <% unless flash.empty? %>
-      <div class="alert alert-success alert-dismissible fade show">
-        <button type="button" class="close" data-dismiss="alert">&times;</button>
-        <strong>Success!</strong> Indicates a successful or positive action.
-      </div>
-    <% end %>
-
-    <% unless flash.empty? %>
-      <% flash.keys.each do |type| %>
-        <p  class="flash-<%= type %>" ><%= flash[type] %></p>
-      <% end %>
+      <% flash.each do |key, message| %>
+        <div class="alert <%=key%> alert-dismissible fade show">
+          <button type="button" class="close" data-dismiss="alert">&times;</button>
+          <%= message %>
+        </div>
+      <%end%>
     <% end %>
 
     <div class="wrapper">
