update layout welcome and auth views

--- a/app/views/auth/login_passwordless.erb
+++ b/app/views/auth/login_passwordless.erb
@@ -1,13 +1,26 @@
-<main>
-  <h2>Login into Party Planner</h2>
+<main class="container">
+  <div class='row mb-3'>
+    <div class="col-sm-12"><h3 class="display-3 text-center">Login into Party Planner</h3></div>
+  </div>
 
-  <p>Passwordless Login allows you to login via an emailed link.</p>
+  <div class='row mb-3'>
+    <div class="col-sm-12"><p class="text-center">Passwordless Login allows you to login via an emailed link.</p></div>
+  </div>
 
-  <form action="/pre_auth/login/passwordless" method="POST">
-    <label for="email">Email:</label><br>
-    <input type="email" id="email" name="email" required><br>
-    <input type="submit" value="Submit">
-  </form> 
-  <br>
-  <a href="/pre_auth/login">Return to password based login.</a>
+  <div class='row mb-3'>
+    <div class="col-sm-12">
+      <form action="/pre_auth/login/passwordless" method="POST" class="was-validated">
+        <div class="form-group">
+          <label for="email">Email:</label>
+          <input type="email" id="email" name="email" class="form-control" placeholder="user@example.com" required>
+          <div class="invalid-feedback">Please enter valid Email.</div>
+        </div>
+        <input type="submit" value="Submit">
+      </form>
+    </div>
+  </div>
+
+  <div class='row mb-3'>
+    <div class="col-sm-12"><a href="/pre_auth/login">Return to password based login.</a></div>
+  </div>
 </main>
