--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -1,23 +1,28 @@
-<div class="container">
-  <header><img src="images/corneal-small.png" class="img-responsive main-image"></header>
-  <div class="col-md-8 col-md-offset-2">
-    <h2>Sinatra Template Default Page</h2>
-
-    <div class="content">
-      <p>Welcome to the Sinatra Template! If you're seeing this page, then everything is working
-      as expected. To get started, delete this file (<code>app/views/welcome.erb)</code> and begin adding
-      your own actions to <code>application_controller.rb</code>. For more information, see the <a href="https://github.com/thebrianemory/corneal">README</a>.</p>
+<main class="container">
+    <div class="row mb-2">
+      <h3 class="display-3">Make your next party Magical!</h3>
     </div>
 
-    <div class="sidebar">
-      <h3>Environment</h3>
-      <ul>
-        <li><b>Ruby:</b> <%= RUBY_VERSION %></li>
-        <li><b>Environment:</b> <%= ENV["RACK_ENV"] %></li>
-        <li><b>Server:</b> <%= @env["SERVER_SOFTWARE"] %></li>
-        <li><b>Port:</b> <%= @env["SERVER_PORT"] %></li>
-      </ul>
-    </div>
+    <article class="row">
+      <p><q>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam commodo.</q><p>
+    </article>
 
-  </div>
-</div>
+    <article class="row mb-2">
+      <div class="col">
+        <h4> Superior Themes </h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla velit magna, finibus et pretium sit amet, gravida eget ipsum.
+        Nulla augue purus, tincidunt ut est nec, sodales posuere odio. Aliquam ornare tortor eu justo hendrerit interdum.
+        Proin quis rutrum dolor. Praesent consequat finibus lectus, quis tempor dolor pretium ac.
+        Ut blandit dictum pellentesque.Vestibulum dictum iaculis mollis.
+        Etiam consectetur, neque sit amet tempor rutrum, ex leo tristique urna, ut interdum enim justo non ante.</p>
+      </div>
+
+      <div class="col">
+        <h4> Superior Venues </h4>
+        <p class="row">Vivamus iaculis scelerisque condimentum. Praesent quis bibendum est. Etiam vitae lacinia tellus.
+          Integer nec pulvinar libero. Integer libero neque, fermentum in est eu, mattis porta purus.
+          Sed aliquam urna euismod nulla porta, quis accumsan orci dictum. Curabitur quis blandit velit.
+          Aliquam sed ante sit amet quam suscipit egestas. Etiam faucibus posuere augue quis suscipit. </p>
+      </div>
+    </article>
+</main>
