--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -37,7 +37,7 @@
         <%end%>
       <% end %>
       <div class=row>
-        <nav class="col-sm-12 navbar navbar-expand-lg ">
+        <nav class="col-sm-12 navbar navbar-expand-lg mb-3  bg-dark navbar-dark">
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <i class="material-icons">menu</i>
           </button>
